Restrict page width

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <div id="not-avail" style="display: none">Not available on mobile devices</div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
