--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <div id="app"></div>
   <div id="not-avail" style="display: none">
     <div class="mobile-container">
-      <img class="mobile-image" src="../assets/images/Not available confused panda.png" />
+      <img class="mobile-image" src="../portfolio/src/assets/images/Not available confused panda.svg" />
       <div class="mobile-text">
-        Coding is fun, but also hard. The mobile experience is coming soon. Stay tuned!
+        All good things take time - the mobile experience is coming soon... I pinky promise! Stay tuned!
         Until then, please visit 'anikavaish01.github.io' on a bigger device.
       </div>
     </div>
