mobile error image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="app"></div>
   <div id="not-avail" style="display: none">
     <div class="mobile-container">
-      <img class="mobile-image" src="../portfolio/src/assets/images/Not available confused panda.svg" />
+      <img class="mobile-image" src="/Not available confused panda.svg" />
       <div class="mobile-text">
         All good things take time - the mobile experience is coming soon... I pinky promise! Stay tuned!
         Until then, please visit 'anikavaish01.github.io' on a bigger device.
