--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
 
 <style>
   .mobile-container {
-    width: 60%;
+    width: 80%;
     margin: auto;
   }
 
   .mobile-text {
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 500;
     color: #6E8270;
   }
 
   .mobile-image {
-    width: 200px;
-    height: auto;
+    width: 100%;
     object-fit: contain;
     margin-bottom: 30px;
+    margin-top: 100px;
   }
 </style>
